adicao do cachorro exercicio

--- a/fundamentos/bloco-03-introducao-a-html-e-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Exercícios</h1>
+    <img src="workout-treadmill.gif" width="300">
     <p>Aqui vai uma lista de pessoas que fiz amizade na Trybe</p>
     <ul>
         <li>Vinicius Oliveira</li>
