--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -6,13 +6,19 @@
     <style>
         h1 {
             font-size: 65px;
-        };
+            color: orange;
+        }
+
+        .list-style {
+          background-color: grey;
+        }
+        
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="list-style">Qual é a sua cor favorita?</p>
+    <ul class="list-style">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
