--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -7,12 +7,19 @@
         h1 {
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
         }
-
+        body {
+          font-size: 16px;
+        }
+        p {
+          font-weight: 600;
+          font-size: 3em;
+        }
         .list-style {
           background-color: grey;
         }
-        
+       
     </style>
   </head>
   <body>
