--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -8,23 +8,29 @@
             font-size: 65px;
             color: orange;
             font-family: sans-serif;
+            text-decoration: underline;
+            background-color: blue;
         }
         body {
           font-size: 16px;
+          text-align: center;
         }
         p {
           font-weight: 600;
           font-size: 3em;
+          font-style: italic;
+          background-color: aqua;
         }
         .list-style {
-          background-color: grey;
+          background-color: blueviolet;
+          list-style: none;
         }
        
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p class="list-style">Qual é a sua cor favorita?</p>
+    <p class="paragraph">Qual é a sua cor favorita?</p>
     <ul class="list-style">
       <li>Amarelo</li>
       <li>Vermelho</li>
