adicao do arquivo css linkado

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,30 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        h1 {
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif;
-            text-decoration: underline;
-            background-color: blue;
-        }
-        body {
-          font-size: 16px;
-          text-align: center;
-        }
-        p {
-          font-weight: 600;
-          font-size: 3em;
-          font-style: italic;
-          background-color: aqua;
-        }
-        .list-style {
-          background-color: blueviolet;
-          list-style: none;
-        }
-       
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
