--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
+    
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+        <li><a href="https://www.google.com.br/" target="_blank">Google</a></li>
+        <li><a href="https://www.youtube.com.br" target="_blank">Youtube</a></li>
+        <li><a href="https://pt.stackoverflow.com/" target="_blank">Stack Overflow</a></li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
   </body>
 </html>
