--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
@@ -15,5 +15,10 @@
         <li><a href="https://pt.stackoverflow.com/" target="_blank">Stack Overflow</a></li>
     </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>They changed the world</li>
+        <li>They are very well builded</li>
+        <li>Very safe to use</li>
+    </ul>
   </body>
 </html>
